Fix missing tooltip for HoverHighlightView

Setting the tooltip on a HoverHighlightView also sets the tooltip on all
its children. Otherwise, the tooltip won't show on hovering above the
HoverHighlightView.

Bug: 845842
Change-Id: I2f3cb31a7b3053eaa42d677e9c967f67781472eb
Reviewed-on: https://chromium-review.googlesource.com/1113437
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Alexander Hendrich <hendrich@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571064}
Former-commit-id: af7d7e71d2a5cb875dfe03d793ceb19c454801c7